--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,9 @@ body {
 }
 
 .player-bg {
+  width: 1280px;
+  height: 720px;
   background-color: #000;
+  background-image: url('https://i.imgur.com/I9Xb1QT.jpg');
+  background-size: cover;
 }
