--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,10 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.player-bg {
-  width: 1280px;
-  height: 720px;
-  background-color: #000;
-  background-image: url('https://i.imgur.com/I9Xb1QT.jpg');
-  background-size: cover;
+@layer base {
+  .player-bg {
+    @apply w-[1280px] h-[720px] bg-cover;
+    background-image: url('https://i.imgur.com/I9Xb1QT.jpg');
+  }
 }
